@@ -6,7 +6,7 @@ libgslieeeutils_a_SOURCES = endian.c print-ieee.c standardize.c \
 	make_rep.c gsl_ieee_utils.h ieee_utils.h \
 	fp-env.c fp-mode.c 
 
-noinst_HEADERS = fp-hpux.c fp-linux.c fp-unknown.c
+noinst_HEADERS = fp-hpux.c fp-linux.c fp-sunos4.c fp-solaris.c fp-unknown.c
 
 INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../err
 
